--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,11 +10,13 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro</title>
 	</head>
-	<a href="/about">Sobre mi</a>
-	<a href="/blog/">Blog</a>
 	<body>
-		
-		<h1>Mi sitio Astro</h1>
-		
-	</body>
+        <a href="/">Inicio</a>
+<a href="/about/">Sobre mi</a>
+
+
+
+      </body>	
+      <h1>Blog</h1>
+    </body>
 </html>
